--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -135,18 +135,19 @@ print(tab)
 
 ### Defining perturbation parameters
 #### Perturbation parameters for count variables
-The next task is to define parameters that are used to perturb count variables which can be achieved with `ck_params_cnts`. This function requires as input the result of function `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package. Please refer also to the documentation of this package for information on the required parameters. A typical application is shown below:
+The next task is to define parameters that are used to perturb count variables which can be achieved with `ck_params_cnts`. This function requires as input the result of function `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package. Please refer also to the documentation of this package for information on the required parameters. In this example we are going to use - amongst others - exemplary ptables that can are provided by the `ptable`-pkg for demonstration purposes:
 
-```{r, message=FALSE}
+```{r, message=FALSE, message=FALSE}
 # two different perturbation parameter sets from the ptable-pkg
-para1 <- ptable::pt_create_pParams(D = 5L, V = 3, js = 2, pstay = 0.5, optim = 1, mono = TRUE)
-ptab1 <- ptable::pt_create_pTable(para1)
+# an example ptable provided directly
+ptab1 <- ptable::pt_ex_cnts()
 
+# creating a ptable by specifying parameters
 para2 <- ptable::pt_create_pParams(D = 8, V = 3, js = 2, pstay = 0.5, optim = 1, mono = TRUE)
 ptab2 <- ptable::pt_create_pTable(para2)
 ```
 
-Then we need to create the required inputs for the cellKey package.
+We then need to create the required inputs for the cellKey package.
 
 ```{r}
 p_cnts1 <- ck_params_cnts(ptab = ptab1)
@@ -217,34 +218,16 @@ A very important parameter is `ptab` which actually holds the perturbation table
 Please note, that if the goal is to have different perturbation tables for cells with an even/odd number of contributors, both `"even"` or `"odd"` must be available in the input list. In the chunk below we create four different perturbation tables. For details on the parameters, please look at the documentation of the [`ptable`](https://github.com/sdcTools/ptable) package.
 
 ```{r}
-# create different ptable using the ptable-pkg
-p_all <- ptable::pt_create_pParams(
-  D = 5, V = 3, step = 0.2, 
-  icat = c(1, 5, 20), table = "nums", type = "all")
-ptab_all <- ptable::pt_create_pTable(p_all)
-
-p_even <- ptable::pt_create_pParams(
-  D = 8, V = 3, step = 0.5, 
-  icat = c(1, 5, 10), table = "nums", type = "even")
-ptab_even <- ptable::pt_create_pTable(p_even)
-
-p_odd <- ptable::pt_create_pParams(
-  D = 6, V = 3, step = 1, 
-  icat = c(1, 10), table = "nums", type = "odd")
-ptab_odd <- ptable::pt_create_pTable(p_odd)
-
-p_sc <- ptable::pt_create_pParams(
-  D = 5, V = 1, step = 1, 
-  icat = c(1, 3, 15), table = "nums", type = "all")
-ptab_sc <- ptable::pt_create_pTable(p_sc)
+# same ptable for all cells except for very small ones
+ex_ptab1 <- ptable::pt_ex_nums(parity = TRUE, separation = TRUE)
 ```
 
-We can then use these tables to finally create objects containing all the required information to create perturbed magnitude tables using `ck_params_nums`. In the first case we want the same perturbation table (`ptab_all`) for cells with an even/odd number of contributors but want to use `ptab_sc` for very small cells. 
+We can now use these tables to finally create objects containing all the required information to create perturbed magnitude tables using `ck_params_nums`. In the first case we want the same perturbation table (`ptab_all`) for cells with an even/odd number of contributors but want to use `ptab_sc` for very small cells. 
 ```{r}
 p_nums1 <- ck_params_nums(
   type = "top_contr",
   top_k = 3,
-  ptab = list(all = ptab_all, small_cells = ptab_sc),
+  ptab = ex_ptab1,
   mult_params = p_flex,
   mu_c = 2,
   same_key = FALSE,
@@ -254,9 +237,15 @@ p_nums1 <- ck_params_nums(
 The second input we generate should use different ptables for cells with an even/odd number of contributing units (`ptab_even` and `ptab_odd`) but should not use a specific perturbation table for very small cells.
 
 ```{r}
+ex_ptab2 <- ptable::pt_ex_nums(parity = FALSE, separation = FALSE)
+```
+
+As above, we need to use `ck_params_nums()` to compute suitable inputs.
+
+```{r}
 p_nums2 <- ck_params_nums(
   type = "mean",
-  ptab = list(even = ptab_even, odd = ptab_odd),
+  ptab = ex_ptab2,
   mult_params = p_simple,
   mu_c = 1.5,
   same_key = FALSE,
