--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -135,7 +135,7 @@ print(tab)
 
 ### Defining perturbation parameters
 #### Perturbation parameters for count variables
-The next task is to define parameters that are used to perturb count variables which can be achieved with `ck_params_cnts`. This function requires as input the result of either `pt_create_pParams` or `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package. Please refer also to the documentation of this package for information on the required parameters. In this example we are going to use - amongst others - exemplary ptables that can are provided by the `ptable`-pkg for demonstration purposes:
+The next task is to define parameters that are used to perturb count variables which can be achieved with `ck_params_cnts`. This function requires as input the result of either `pt_create_pParams`, `pt_create_pTable` or `create_cnt_ptable` from the [**ptable**](https://github.com/sdcTools/ptable) package. Please refer also to the documentation of this package for information on the required parameters. In this example we are going to use - amongst others - exemplary ptables that can are provided by the `ptable`-pkg for demonstration purposes:
 
 ```{r, message=FALSE, message=FALSE}
 # two different perturbation parameter sets from the ptable-pkg
@@ -143,9 +143,9 @@ The next task is to define parameters that are used to perturb count variables w
 ptab1 <- ptable::pt_ex_cnts()
 
 # creating a ptable by specifying parameters
-para2 <- ptable::pt_create_pParams(
+para2 <- ptable::create_cnt_ptable(
   D = 8, V = 3, js = 2, pstay = 0.5, 
-  optim = 1, mono = TRUE, table = "cnts")
+  optim = 1, mono = TRUE)
 ```
 
 We then need to create the required inputs for the cellKey package.
@@ -216,7 +216,7 @@ A very important parameter is `ptab` which actually holds the perturbation table
 * `"odd"`: will be used to look up perturbation values for cells with an odd number of contributors
 * `"small_cells"`: if specified, this ptable will be used to extract perturbation values for very small cells
 
-Please note, that if the goal is to have different perturbation tables for cells with an even/odd number of contributors, both `"even"` or `"odd"` must be available in the input list. In the chunk below we create four different perturbation tables. For details on the parameters, please look at the documentation of the [`ptable`](https://github.com/sdcTools/ptable) package.
+Please note, that if the goal is to have different perturbation tables for cells with an even/odd number of contributors, both `"even"` or `"odd"` must be available in the input list. In the chunk below we create four different perturbation tables. For details on the parameters, please look at the documentation of the [`ptable`](https://github.com/sdcTools/ptable) package, especially in `ptable::create_num_ptable()`.
 
 ```{r}
 # same ptable for all cells except for very small ones
